# whipping_star

./: .gitignore  CMakeLists.txt
configure/: setup_gcc.sh  setup_pgi.sh
examples/: CMakeLists.txt  CreateComparisonsSpectrum.cxx  CreateComparisonsSpectrumAllvars.cxx  CreateConstrainedFarSBMatrix.cxx  CreateConstrainedHighNueMatrix.cxx  CreateConstrainedMatrix.cxx  CreateMatrixPlots.cxx
hdf5examples/: Dockerfile
hdf5examples/ProtoType/: .CMakeLists.txt.swp  CMakeLists.txt  sbnPlotMod.py
hdf5examples/ProtoType/include/: SBNchi.h  SBNconfig.h  SBNfeld.h  SBNosc.h  SBNspec.h  ngrid.h  prob.h  tools.h
hdf5examples/ProtoType/src/: .highfivewrite.cpp.swp  CMakeLists.txt  SBNchi.cxx  SBNconfig.cxx  SBNfeld.cxx  SBNosc.cxx  SBNspec.cxx  highfivewrite.cpp  nopreosc.cpp  prob.cxx  pureeigen.cpp
inc/: SBNchi.h  SBNcls.h  SBNconfig.h  SBNcovariance.h  SBNfeld.h  SBNfit.h  SBNfit3pN.h  SBNgenerate.h  SBNosc.h  SBNprob.h  SBNspec.h  SBNspec2D.h  SBNsvd.h  branch_variable.h  peleeplotter.h  prob.h
lee/: CMakeLists.txt  DLChi2Draw.cxx  DLCombinedFit.cxx  DLCombinedFitDOF.cxx  DLCombinedFitFake.cxx  DLCovariance.cxx  DLSens.cxx  DLSensCLS.cxx  DLSensFit.cxx  DLUnfold.cxx  DLUtil.cxx  DLUtil.h  UnfoldScale.cxx
lee/arxiv/: DLSensCLS.cxx  DLSensFit.cxx
lee/xml/sens/: combined_August2018.xml  combined_August2018_hopper.xml  combined_October2018.xml  combined_best_August2018.xml  combined_doubleEff_August2018.xml  nueapp_August2018.xml  nueapp_August2018_hopper.xml  nueapp_October2018.xml
lee/xml/unfolding/: unfolded_August2018.xml  unfolded_August2018_bestCase.xml  unfolded_August2018_doubleEff.xml
libio/: CMakeLists.txt
pelee_plotter/: CMakeLists.txt  MB_constraint_channels.cxx  MB_constraint_combined.cxx  MC_constraint_channels.cxx  createDetsysMatrix.cxx  make_stacked_plots.cxx  plotSignalStrength.cxx  plotSignificance.cxx  variance_constraint_channels.cxx  variance_constraint_combined.cxx
pelee_scripts/: PeLEE_sbnfit_fakedatastudies.sh  create_chi2pvals_table.sh  do_FC.sh  fakedata_header.xml  fakedata_tail.xml  make_beforeafter_constraint_table.sh  make_beforeconstraint_table.sh  make_fakedata_xml.sh  remake_cov_and_spec.sh  remake_cov_and_spec_fakedata.sh  remake_cov_and_spec_final.sh  run_fc_constrained.sh  run_fc_constrained_fakedata.sh  run_sensitivity_fakedata_muBF.sh  unblinding_test_stats.sh
src/: CMakeLists.txt  SBNchi.cxx  SBNcls.cxx  SBNconfig.cxx  SBNcovariance.cxx  SBNfeld.cxx  SBNgenerate.cxx  SBNosc.cxx  SBNspec.cxx  peleeplotter.cxx  prob.cxx
xml/: example.xml
xml/PELEE/: const_np_numu_reco_e_H1_CV_mc_collabOct.xml  const_np_numu_reco_e_H1_mc_collab.xml  const_np_numu_reco_e_H1_mc_collabOct.xml  const_np_numu_reco_e_H1_mc_collabOctFullMC.xml  const_np_numu_reco_e_H1_mc_collabOctFullMCunisim_opendata.xml  const_np_zp_numu_reco_e_H1_mc_collabOct.xml  const_zp_numu_reco_e_H1_mc_collab.xml  const_zp_numu_reco_e_H1_mc_collabOct.xml  np_numuNp_reco_e_H1_mc_collabOctFullMCunisim_opendata.xml  np_numu_reco_e_H1_DATA_mc_collabOctFullMCunisim_opendata.xml  np_numu_reco_e_H1_mc_collabOctFullMC.xml  np_numu_reco_e_H1_mc_collabOctFullMCunisim.xml  np_numu_reco_e_H1_mc_collabOctFullMCunisim_opendata.xml  np_zp_numu_reco_e_H1_mc_collabOctFullMC.xml  np_zp_numu_reco_e_H1_mc_collabOctFullMCunisim.xml  np_zp_numu_reco_e_H1_mc_collabOctFullMCunisim_opendata.xml  numuNp_reco_e_H1_DATA_mc_collabOctFullMCunisim_opendata.xml  numu_reco_e_H1_DATA_mc_collabOctFullMCunisim_opendata.xml  zp_numu0p_reco_e_H1_DATA_mc_collabOctFullMCunisim_opendata.xml  zp_numu0p_reco_e_H1_mc_collabOctFullMCunisim.xml  zp_numu_reco_e_H1_DATA_mc_collabOctFullMCunisim.xml  zp_numu_reco_e_H1_mc_collabOctFullMC.xml  zp_numu_reco_e_H1_mc_collabOctFullMCunisim.xml  zp_numu_reco_e_H1_mc_collabOctFullMCunisim_opendata.xml
xml/PELEE/Fakedata/: Combined_1eNp_1e0p_numu_reco_energy_fakedata1_DATA.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata1_MC.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata1_nolee_MC.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata2_DATA.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata2_MC.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata2_nolee_MC.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata3_DATA.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata3_MC.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata3_nolee_MC.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata4_DATA.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata4_MC.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata4_nolee_MC.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata5_DATA.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata5_MC.xml  Combined_1eNp_1e0p_numu_reco_energy_fakedata5_nolee_MC.xml  const_np_fakedata1.xml  const_np_fakedata2.xml  const_np_fakedata3.xml  const_np_fakedata4.xml  const_np_fakedata5.xml  const_np_numu_reco_e_H1_mc_fakedata1.xml  const_np_zp_fakedata2.xml  const_np_zp_fakedata4.xml  const_np_zp_fakedata5.xml  const_np_zp_numu_reco_e_H1_mc_fakedata.xml  const_zp_fakedata1.xml  const_zp_fakedata2.xml  const_zp_fakedata3.xml  const_zp_fakedata4.xml  const_zp_fakedata5.xml  const_zp_numu_reco_e_H1_mc_fakedata.xml  constrained_np_numu_reco_e_H1_fakedata1.xml  constrained_np_numu_reco_e_H1_fakedata2.xml  constrained_np_numu_reco_e_H1_fakedata3.xml  constrained_np_numu_reco_e_H1_fakedata4.xml  constrained_np_numu_reco_e_H1_fakedata5.xml  constrained_np_zp_numu_reco_e_H1_fakedata1.xml  constrained_np_zp_numu_reco_e_H1_fakedata3.xml  constrained_np_zp_numu_reco_e_H1_fakedata5.xml  constrained_zp_numu_reco_e_H1_fakedata1.xml  (+61 more)
xml/PELEE/RealDataTN/: np_numu_reco_e_H1_mc_collabOctFullMCunisim.xml  np_zp_numu_reco_e_H1_mc_collabOctFullMCunisim.xml  np_zp_numu_reco_e_H1_mc_collabOctFullMCunisim_flux.xml  np_zp_numu_reco_e_H1_mc_collabOctFullMCunisim_fluxonly.xml  np_zp_numu_reco_e_H1_mc_collabOctFullMCunisim_g4only.xml  np_zp_numu_reco_e_H1_mc_collabOctFullMCunisim_genie.xml  np_zp_numu_reco_e_H1_mc_collabOctFullMCunisim_genieonly.xml  zp_numu_reco_e_H1_mc_collabOctFullMCunisim.xml
xml/PELEE/unblinding/: const_np_zp_numu_reco_e_H1_mc_collabOctFullMCunisim.xml  const_zp_numu_reco_e_H1_mc_collabOctFullMCunisim.xml  (+5 more)
